Video Sequencer: Unlock icon +Alt doesn't unlock the full selection #74434

Closed
opened 2020-03-04 14:06:32 +01:00 by tintwotin · 6 comments

System Information
Operating system: Windows-10-10.0.17763-SP0 64 Bits
Graphics card: Intel(R) UHD Graphics 600 Intel 4.5.0 - Build 26.20.100.7262

Blender Version
Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-02-12 16:20, hash: 77d23b0bd7
Worked: (optional)

Short description of error
In the VSE Sidebar clicking the unlock icon +Alt doesn't unlock the full selection, which would be in consistency with how +Alt works in the Sidebar, so this is a bug.
unlock_selected.gif

  • Add a couple of strips to the Sequencer.
  • Select them all.
  • Press +Alt and click on the lock icon in the sidebar.
  • All strips will be locked.
  • Press +Alt and click on the unlock icon in the sidebar.
  • Only the active strip will be unlocked.
    This is a bug and inconsistent with how +Alt works in the Sidebar.
**System Information** Operating system: Windows-10-10.0.17763-SP0 64 Bits Graphics card: Intel(R) UHD Graphics 600 Intel 4.5.0 - Build 26.20.100.7262 **Blender Version** Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-02-12 16:20, hash: `77d23b0bd7` Worked: (optional) **Short description of error** In the VSE Sidebar clicking the unlock icon +Alt doesn't unlock the full selection, which would be in consistency with how +Alt works in the Sidebar, so this is a bug. ![unlock_selected.gif](https://archive.blender.org/developer/F8387885/unlock_selected.gif) - Add a couple of strips to the Sequencer. - Select them all. - Press +Alt and click on the lock icon in the sidebar. - All strips will be locked. - Press +Alt and click on the unlock icon in the sidebar. - Only the active strip will be unlocked. This is a bug and inconsistent with how +Alt works in the Sidebar.
Author

Added subscriber: @tintwotin

Added subscriber: @tintwotin
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser self-assigned this 2020-03-04 15:18:35 +01:00
Member

Can confirm, checking...

Can confirm, checking...

This issue was referenced by 2a4f350940

This issue was referenced by 2a4f35094074929fc29fe9d2c9ae46b96237a557
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74434
No description provided.